--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -68,9 +68,30 @@
   font-family:Source Sans Pro,sans-serif;
 }
 
-.title {
-  font-size: 14px;
-  font-weight: 600;
-  margin-left: 10px;
+.sidebar-text {
   color: #e1e4e8;
+  background-color: #1e1f2b;
+  font-weight: 300;
+  text-transform: lowercase;
+  width: 18vw;
+  text-align: left;
+  padding: .5rem .75rem;
+  font-size: 1rem;
+  font-family:Source Sans Pro,sans-serif;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  width: 100%;
+  display: flex; 
+}
+
+.sidebar-text:hover {
+  background-color: #2a2c36;
+}
+
+.logos {
+  width: 1rem;
+  height: 1rem;
+  display: inline-table;
+  margin-right: 0.3rem;
 }
